--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -52,7 +52,7 @@ body {
 
 .luz.active.rojo {
   box-shadow:
-    0 0 40px 20px red,
+    0 0 40px 20px #900,
     0 0 16px 8px currentColor,
     0 0 8px #fff inset;
   filter: brightness(1.3);
@@ -61,7 +61,7 @@ body {
 
 .luz.active.amarillo {
   box-shadow:
-    0 0 40px 20px yellow,
+    0 0 40px 20px #c60,
     0 0 16px 8px currentColor,
     0 0 8px #fff inset;
   filter: brightness(1.3);
@@ -70,7 +70,7 @@ body {
 
 .luz.active.verde {
   box-shadow:
-    0 0 40px 20px green,
+    0 0 40px 20px #198d2c,
     0 0 16px 8px currentColor,
     0 0 8px #fff inset;
   filter: brightness(1.3);
